--- a/pages/11583.html
+++ b/pages/11583.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,7 +312,7 @@ margin-left: 0em;
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
 <ul>
-<li><a href="https://en.wikipedia.org/wiki/John_McKay_(mathematician">Wikipedia entry</a>)</li>
+<li><a href="https://en.wikipedia.org/wiki/John_McKay_%28mathematician%29">Wikipedia entry</a></li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
@@ -320,14 +320,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 08:55:55.
+  Last revised on September 22, 2018 at 09:05:01.
   See the <a href="https://ncatlab.org/nlab/history/John McKay" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/John+McKay" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/John+McKay/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/John+McKay" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/John+McKay" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/John+McKay" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/John+McKay/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/John+McKay" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/John+McKay" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/John McKay/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
