--- a/pages/15269.html
+++ b/pages/15269.html
@@ -418,6 +418,364 @@ margin-left: 0em;
 </ul><div>
 <p><a href="/nlab/edit/representation+theory+-+contents">Edit this sidebar</a></p>
 </div></div>
+
+<h4 id="cohomology">Cohomology</h4>
+
+<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></strong></p><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/cocycle">cocycle</a>, <a class="existingWikiWord" href="/nlab/show/coboundary">coboundary</a>, <a class="existingWikiWord" href="/nlab/show/coefficient">coefficient</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/homology">homology</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/chain">chain</a>, <a class="existingWikiWord" href="/nlab/show/cycle">cycle</a>, <a class="existingWikiWord" href="/nlab/show/boundary">boundary</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/characteristic+class">characteristic class</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/universal+characteristic+class">universal characteristic class</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/secondary+characteristic+class">secondary characteristic class</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/differential+characteristic+class">differential characteristic class</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/fiber+sequence">fiber sequence</a>/<a class="existingWikiWord" href="/nlab/show/long+exact+sequence+in+cohomology">long exact sequence in cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/fiber+%E2%88%9E-bundle">fiber ∞-bundle</a>, <a class="existingWikiWord" href="/nlab/show/principal+%E2%88%9E-bundle">principal ∞-bundle</a>, <a class="existingWikiWord" href="/nlab/show/associated+%E2%88%9E-bundle">associated ∞-bundle</a>,</p>
+
+<p><a class="existingWikiWord" href="/nlab/show/twisted+%E2%88%9E-bundle">twisted ∞-bundle</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group+extension">∞-group extension</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/obstruction">obstruction</a></p>
+</li>
+</ul><h3 id="special_and_general_types">Special and general types</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/cochain+cohomology">cochain cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/ordinary+cohomology">ordinary cohomology</a>, <a class="existingWikiWord" href="/nlab/show/singular+cohomology">singular cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/group+cohomology">group cohomology</a>, <a class="existingWikiWord" href="/nlab/show/nonabelian+group+cohomology">nonabelian group cohomology</a>, <a class="existingWikiWord" href="/nlab/show/Lie+group+cohomology">Lie group cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Galois+cohomology">Galois cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/groupoid+cohomology">groupoid cohomology</a>, <a class="existingWikiWord" href="/nlab/show/nonabelian+groupoid+cohomology">nonabelian groupoid cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">generalized (Eilenberg-Steenrod) cohomology</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/cobordism+cohomology+theory">cobordism cohomology theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/integral+cohomology">integral cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/K-theory">K-theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/elliptic+cohomology">elliptic cohomology</a>, <a class="existingWikiWord" href="/nlab/show/tmf">tmf</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/taf">taf</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/abelian+sheaf+cohomology">abelian sheaf cohomology</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Deligne+cohomology">Deligne cohomology</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Dolbeault+cohomology">Dolbeault cohomology</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/etale+cohomology">etale cohomology</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/group+of+units">group of units</a>, <a class="existingWikiWord" href="/nlab/show/Picard+group">Picard group</a>, <a class="existingWikiWord" href="/nlab/show/Brauer+group">Brauer group</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/crystalline+cohomology">crystalline cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/syntomic+cohomology">syntomic cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/motivic+cohomology">motivic cohomology</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/cohomology+of+operads">cohomology of operads</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Hochschild+cohomology">Hochschild cohomology</a>, <a class="existingWikiWord" href="/nlab/show/cyclic+cohomology">cyclic cohomology</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/string+topology">string topology</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/nonabelian+cohomology">nonabelian cohomology</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/principal+%E2%88%9E-bundle">principal ∞-bundle</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/universal+principal+%E2%88%9E-bundle">universal principal ∞-bundle</a>, <a class="existingWikiWord" href="/nlab/show/groupal+model+for+universal+principal+%E2%88%9E-bundles">groupal model for universal principal ∞-bundles</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/principal+bundle">principal bundle</a>, <a class="existingWikiWord" href="/nlab/show/Atiyah+Lie+groupoid">Atiyah Lie groupoid</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/principal+2-bundle">principal 2-bundle</a>/<a class="existingWikiWord" href="/nlab/show/gerbe">gerbe</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/locally+constant+%E2%88%9E-stack">covering ∞-bundle</a>/<a class="existingWikiWord" href="/nlab/show/local+system">local system</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-vector+bundle">(∞,1)-vector bundle</a> / <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2Cn%29-vector+bundle">(∞,n)-vector bundle</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/quantum+anomaly">quantum anomaly</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/orientation">orientation</a>, <a class="existingWikiWord" href="/nlab/show/Spin+structure">Spin structure</a>, <a class="existingWikiWord" href="/nlab/show/Spin%5Ec+structure">Spin^c structure</a>, <a class="existingWikiWord" href="/nlab/show/String+structure">String structure</a>, <a class="existingWikiWord" href="/nlab/show/Fivebrane+structure">Fivebrane structure</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/cohomology+with+constant+coefficients">cohomology with constant coefficients</a> / <a class="existingWikiWord" href="/nlab/show/cohomology+with+a+local+system+of+coefficients">with a local system of coefficients</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-Lie+algebra+cohomology">∞-Lie algebra cohomology</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Lie+algebra+cohomology">Lie algebra cohomology</a>, <a class="existingWikiWord" href="/nlab/show/nonabelian+Lie+algebra+cohomology">nonabelian Lie algebra cohomology</a>, <a class="existingWikiWord" href="/nlab/show/Lie+algebra+extensions">Lie algebra extensions</a>, <a class="existingWikiWord" href="/nlab/show/Gelfand-Fuks+cohomology">Gelfand-Fuks cohomology</a>,</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Gerstenhaber-Schack+cohomology">bialgebra cohomology</a></p>
+</li>
+</ul><h3 id="special_notions">Special notions</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/%3Fech+cohomology">?ech cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/hypercohomology">hypercohomology</a></p>
+</li>
+</ul><h3 id="variants">Variants</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+theory">equivariant homotopy theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Bredon+cohomology">Bredon cohomology</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/twisted+cohomology">twisted cohomology</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/twisted+bundle">twisted bundle</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/twisted+K-theory">twisted K-theory</a>, <a class="existingWikiWord" href="/nlab/show/twisted+spin+structure">twisted spin structure</a>, <a class="existingWikiWord" href="/nlab/show/twisted+spin%5Ec+structure">twisted spin^c structure</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/twisted+differential+c-structures">twisted differential c-structures</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/twisted+differential+string+structure">twisted differential string structure</a>, <a class="existingWikiWord" href="/nlab/show/twisted+differential+fivebrane+structure">twisted differential fivebrane structure</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p>differential cohomology</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/differential+cohomology">differential generalized (Eilenberg-Steenrod) cohomology</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/differential+cobordism+cohomology">differential cobordism cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Deligne+cohomology">Deligne cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/differential+K-theory">differential K-theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/differential+elliptic+cohomology">differential elliptic cohomology</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/schreiber/show/differential+cohomology+in+a+cohesive+topos">differential cohomology in a cohesive topos</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Chern-Weil+theory">Chern-Weil theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-Chern-Weil+theory">∞-Chern-Weil theory</a></p>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/relative+cohomology">relative cohomology</a></p>
+</li>
+</ul><h3 id="extra_structure">Extra structure</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Hodge+structure">Hodge structure</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/orientation">orientation</a>, <a class="existingWikiWord" href="/nlab/show/orientation+in+generalized+cohomology">in generalized cohomology</a></p>
+</li>
+</ul><h3 id="operations">Operations</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/cohomology+operations">cohomology operations</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/cup+product">cup product</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/connecting+homomorphism">connecting homomorphism</a>, <a class="existingWikiWord" href="/nlab/show/Bockstein+homomorphism">Bockstein homomorphism</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/fiber+integration">fiber integration</a>, <a class="existingWikiWord" href="/nlab/show/transgression">transgression</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/cohomology+localization">cohomology localization</a></p>
+</li>
+</ul><h3 id="theorems">Theorems</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/universal+coefficient+theorem">universal coefficient theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/K%C3%BCnneth+theorem">Künneth theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/de+Rham+theorem">de Rham theorem</a>, <a class="existingWikiWord" href="/nlab/show/Poincare+lemma">Poincare lemma</a>, <a class="existingWikiWord" href="/nlab/show/Stokes+theorem">Stokes theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Hodge+theory">Hodge theory</a>, <a class="existingWikiWord" href="/nlab/show/Hodge+theorem">Hodge theorem</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/nonabelian+Hodge+theory">nonabelian Hodge theory</a>, <a class="existingWikiWord" href="/nlab/show/noncommutative+Hodge+theory">noncommutative Hodge theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Brown+representability+theorem">Brown representability theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/abelian+sheaf+cohomology">hypercovering theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Eckmann-Hilton+duality">Eckmann-Hilton-Fuks duality</a></p>
+</li>
+</ul><div>
+<p>
+  <a href="/nlab/edit/cohomology+-+contents">Edit this sidebar</a>
+</p>
+</div></div>
 </div>
 </div>
 
@@ -499,16 +857,16 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Miles+Reid">Miles Reid</a>, <em><a href="homepages.warwick.ac.uk/staff/Miles.Reid/McKay/">Links to papers on McKay correspondence</a></em></li>
 </ul>
 
-<p>As anisomorphism between <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of the resolution and <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of the <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a>:</p>
+<p>As an isomorphism between the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> and the plain <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of its resolutioningularity#ResolutionBySpheresTouchingAlongADynkinDiagram), the McKay correspondence is proven in:</p>
 
 <ul>
-<li id="GSV85">
-<p><a class="existingWikiWord" href="/nlab/show/G%C3%A9rard+Gonzalez-Sprinberg">Gérard Gonzalez-Sprinberg</a>, <a class="existingWikiWord" href="/nlab/show/Jean-Louis+Verdier">Jean-Louis Verdier</a>, Construction géométrique de la correspondance de McKay, Ann. Sci. ́École Norm. Sup.16 (1983) 409–449. (<a href="http://www.numdam.org/item?id=ASENS_1983_4_16_3_409_0">numdam</a>)</p>
-</li>
+<li id="GSV85"><a class="existingWikiWord" href="/nlab/show/G%C3%A9rard+Gonzalez-Sprinberg">Gérard Gonzalez-Sprinberg</a>, <a class="existingWikiWord" href="/nlab/show/Jean-Louis+Verdier">Jean-Louis Verdier</a>, <em>Construction géométrique de la correspondance de McKay</em>, Ann. Sci. ́École Norm. Sup.16 (1983) 409–449. (<a href="http://www.numdam.org/item?id=ASENS_1983_4_16_3_409_0">numdam</a>)</li>
+</ul>
 
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Tom+Bridgeland">Tom Bridgeland</a>, <a class="existingWikiWord" href="/nlab/show/Alastair+King">Alastair King</a>, <a class="existingWikiWord" href="/nlab/show/Miles+Reid">Miles Reid</a>, <em>The McKay correspondence as an equivalence of derived categories</em> (<a href="http://www.ams.org/journals/jams/2001-14-03/S0894-0347-01-00368-X/S0894-0347-01-00368-X.pdf">pdf</a>)</p>
-</li>
+<p>An analogous discussion for <a class="existingWikiWord" href="/nlab/show/derived+categories">derived categories</a> of coherent sheaves is in</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Tom+Bridgeland">Tom Bridgeland</a>, <a class="existingWikiWord" href="/nlab/show/Alastair+King">Alastair King</a>, <a class="existingWikiWord" href="/nlab/show/Miles+Reid">Miles Reid</a>, <em>The McKay correspondence as an equivalence of derived categories</em> (<a href="http://www.ams.org/journals/jams/2001-14-03/S0894-0347-01-00368-X/S0894-0347-01-00368-X.pdf">pdf</a>)</li>
 </ul>
 </body></html>
 
@@ -516,7 +874,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 08:58:51.
+  Last revised on September 22, 2018 at 09:51:40.
   See the <a href="https://ncatlab.org/nlab/history/McKay correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
