--- a/pages/11534.html
+++ b/pages/11534.html
@@ -422,7 +422,24 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#Definition">Definition</a><ul><li><a href="#AsEnrichedInPermutativeCategories">As enriched in permutative categories</a></li><li><a href="#AsEnrichedInabelianGroups">As enriched in abelian groups</a></li><li><a href="#EnrichedInSpectra">As enriched in spectra</a></li></ul></li><li><a href="#properties">Properties</a><ul><li><a href="#relation_to_spectra">Relation to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-Spectra</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#Definition'>Definition</a></li>
+<ul>
+<li><a href='#AsEnrichedInPermutativeCategories'>As enriched in permutative categories</a></li>
+<li><a href='#AsEnrichedInabelianGroups'>As enriched in abelian groups</a></li>
+<li><a href='#EnrichedInSpectra'>As enriched in spectra</a></li>
+</ul>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#relation_to_spectra'>Relation to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-Spectra</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>By the <em>Burnside category</em> of a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> one means either</p>
@@ -451,7 +468,7 @@ margin-left: 0em;
 
 <p>The <a class="existingWikiWord" href="/nlab/show/functors">functors</a>/<a class="existingWikiWord" href="/nlab/show/additive+functors">additive functors</a>/<a class="existingWikiWord" href="/nlab/show/enriched+%28%E2%88%9E%2C1%29-functors">enriched (∞,1)-functors</a> from the Burnside category to, in particular, the <a class="existingWikiWord" href="/nlab/show/category+of+abelian+groups">category of abelian groups</a>/<a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+of+spectra">(∞,1)-category of spectra</a> are called <em><a class="existingWikiWord" href="/nlab/show/Mackey+functors">Mackey functors</a></em>.</p>
 
-<p>A <a class="existingWikiWord" href="/nlab/show/functor">functor</a> out of the Burndside category is called a <em><a class="existingWikiWord" href="/nlab/show/Mackey+functor">Mackey functor</a></em>, specifically if it is an <a class="existingWikiWord" href="/nlab/show/Ab">Ab</a>-<a class="existingWikiWord" href="/nlab/show/enriched+functor">enriched functor</a> to <a class="existingWikiWord" href="/nlab/show/Ab">Ab</a> out of the <a class="existingWikiWord" href="/nlab/show/additive+category">additive category</a>-version of the Burnside category. A <a class="existingWikiWord" href="/nlab/show/spectra">spectra</a>-<a class="existingWikiWord" href="/nlab/show/enriched+functor">enriched functor</a> out of the spectral Burnside category to <a class="existingWikiWord" href="/nlab/show/Spectra">Spectra</a> is called a <em><a class="existingWikiWord" href="/nlab/show/spectral+Mackey+functor">spectral Mackey functor</a></em>, for emphasis. These spectral Mackey functors are <a class="existingWikiWord" href="/nlab/show/equivalence+of+%28infinity%2C1%29-categories">equivalent</a> to <a class="existingWikiWord" href="/nlab/show/genuine+G-spectra">genuine G-spectra</a>.</p>
+<p>A <a class="existingWikiWord" href="/nlab/show/functor">functor</a> out of the Burnside category is called a <em><a class="existingWikiWord" href="/nlab/show/Mackey+functor">Mackey functor</a></em>, specifically if it is an <a class="existingWikiWord" href="/nlab/show/Ab">Ab</a>-<a class="existingWikiWord" href="/nlab/show/enriched+functor">enriched functor</a> to <a class="existingWikiWord" href="/nlab/show/Ab">Ab</a> out of the <a class="existingWikiWord" href="/nlab/show/additive+category">additive category</a>-version of the Burnside category. A <a class="existingWikiWord" href="/nlab/show/spectra">spectra</a>-<a class="existingWikiWord" href="/nlab/show/enriched+functor">enriched functor</a> out of the spectral Burnside category to <a class="existingWikiWord" href="/nlab/show/Spectra">Spectra</a> is called a <em><a class="existingWikiWord" href="/nlab/show/spectral+Mackey+functor">spectral Mackey functor</a></em>, for emphasis. These spectral Mackey functors are <a class="existingWikiWord" href="/nlab/show/equivalence+of+%28infinity%2C1%29-categories">equivalent</a> to <a class="existingWikiWord" href="/nlab/show/genuine+G-spectra">genuine G-spectra</a>.</p>
 
 <h2 id="Definition">Definition</h2>
 
@@ -656,14 +673,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 19, 2018 at 12:13:14.
+  Last revised on September 22, 2018 at 11:08:37.
   See the <a href="https://ncatlab.org/nlab/history/Burnside category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Burnside+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+category/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Burnside+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Burnside+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+category/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Burnside+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Burnside category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
